# yaqd-pi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  lextab.py  pyproject.toml  yacctab.py
.github/workflows/: python-mypy.yml  run-entry-points.yml
scripts/: _spec.py  gui.py  spectrometer_mapping.py  temp.py
yaqd_pi/: __init__.py  _pi_proem.py  _roi.py  lextab.py  params.txt  pi-proem.avpr  pi-proem.toml  temp.py  yacctab.py
