[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_pi"
dist-name = "yaqd-pi"
author = "yaq developers"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = [
	"yaqd-core>=2021.2.0",
  "instrumental",
  "scipy"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/yaq-project/yaqd-pi"
Issues = "https://github.com/yaq-project/yaqd-pi/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-pi-proem = "yaqd_pi._pi_proem:PiProem.main"


[tool.black]
line-length = 99
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
