[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yaqd-pi"
authors = [
    {name="Jason Scheeler"},
    {name="Dan Kohler"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "yaqd-core>=2021.2.0",
    "instrumental-lib[cameras.picam]",
    "numpy",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version", "description"]

[project.scripts]
yaqd-pi-proem = "yaqd_pi._pi_proem:PiProem.main"

[project.urls]
Homepage = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-pi"
Issues = "https://github.com/yaq-project/yaqd-pi/issues"

[tool.optional-dependencies]
dev = ["black", "pre-commit"]
gui = ["yaqc", "matplotlib", "click"]

[[tool.mypy.overrides]]
module = ["instrumental.drivers.*"]
ignore_missing_imports = true

[tool.black]
line-length = 99
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
